# robot

./: CMakeLists.txt  README.md  diffdis.m  visdetectpoisson.cpp
conf/: readme.md  scancrawler.json  scaninfo.json
data/: baby3d-face.ply  mom3d-face.ply  toy3d-basketball-10001.ply
distrib/aiethan/include/aiethan/common/: aicolor.h  aivector.h  match_pair.h  math.h  permutation.h  port.h
distrib/aiethan/include/aiethan/plain/: quad_node.h  quad_tree.h  quad_util.h  texture2d.h
distrib/aiethan/include/aiethan/solid/: analysis.h  octo_node.h  octo_tree.h  octo_util.h  texture3d.h
distrib/aiethantool/include/aiethan/tool/: diffgeom.h  hadamard.h  readme.md  triangle.h  visdetect.h
distrib/aiethantool/lib/: readme.md
eigen3/: readme.md
img/: readme.md
matlab/: diffdis.m
vcglib/: readme.md
