cmake_minimum_required(VERSION 2.6)
project(hello)

set(PCL_DIR /home/hongjun/hjwang/pcl/dist/share/pcl-1.8/)
find_package(PCL 1.8 REQUIRED)
message(STATUS "PCL library status:")
message(STATUS "    version: ${PCL_VERSION}")
message(STATUS "    libraries: ${PCL_LIBRARIES}")
message(STATUS "    include path: ${PCL_INCLUDE_DIRS}")
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})


include_directories(/home/hongjun/workspace/aiethan/build/include)
include_directories(/home/hongjun/hjwang/pcl/dist/include/pcl-1.8)
include_directories(/usr/include/eigen3)
include_directories(/home/hongjun/hjwang/jsoncpp1.8.3/include)
include_directories(/home/hongjun/hjwang/openmesh/dist/include)
include_directories(/home/hongjun/hjwang/cgal/dist/include)
include_directories(/home/hongjun/hjwang/aiethan/tooldist/include)
include_directories(/home/hongjun/hjwang/meshlab-2016.12/vcglib)

add_executable(hello main.cpp)
target_link_libraries(hello /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
#target_link_libraries(hello /home/hongjun/hjwang/pcl/dist/lib/libpcl_common.so)
#target_link_libraries(hello /home/hongjun/hjwang/pcl/dist/lib/libpcl_io_ply.so)
#target_link_libraries(hello /home/hongjun/hjwang/pcl/dist/lib/libpcl_io.so)
target_link_libraries(hello ${PCL_LIBRARIES})
target_link_libraries(hello /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(horse horse.cpp)
target_link_libraries(horse /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(horse /home/hongjun/hjwang/pcl/dist/lib/libpcl_common.so)
target_link_libraries(horse /home/hongjun/hjwang/pcl/dist/lib/libpcl_io_ply.so)
target_link_libraries(horse /home/hongjun/hjwang/pcl/dist/lib/libpcl_io.so)
target_link_libraries(horse /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(corner corner.cpp)
target_link_libraries(corner /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(corner /home/hongjun/hjwang/pcl/dist/lib/libpcl_common.so)
target_link_libraries(corner /home/hongjun/hjwang/pcl/dist/lib/libpcl_io_ply.so)
target_link_libraries(corner /home/hongjun/hjwang/pcl/dist/lib/libpcl_io.so)
target_link_libraries(corner /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(pclvis pcl_visualizer_demo.cpp process.cpp)
target_link_libraries(pclvis ${PCL_LIBRARIES})
target_link_libraries(pclvis /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)

add_executable(horsevis horse_vis.cpp horse_pro.cpp)
target_link_libraries(horsevis ${PCL_LIBRARIES})
target_link_libraries(horsevis /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)

add_executable(test test.cpp diffgeom.cpp)
target_link_libraries(test /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)

add_executable(queue queue_test.cpp queue_cyc.cpp)
target_link_libraries(queue /usr/lib/x86_64-linux-gnu/libpthread.so)

add_executable(filter pclfilter.cpp)
target_link_libraries(filter /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(filter /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)
target_link_libraries(filter ${PCL_LIBRARIES})
target_link_libraries(filter /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(glmesh openglmesh.cpp)
target_link_libraries(glmesh /home/hongjun/hjwang/openmesh/dist/lib/libOpenMeshCored.so)
target_link_libraries(glmesh /usr/lib/x86_64-linux-gnu/libglut.so)
target_link_libraries(glmesh /usr/lib/x86_64-linux-gnu/libGL.so)

add_executable(crawler crawler.cpp)
target_link_libraries(crawler /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(crawler /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)
target_link_libraries(crawler ${PCL_LIBRARIES})
target_link_libraries(crawler /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(triangle triangle.cpp)
target_link_libraries(triangle /home/hongjun/hjwang/cgal/dist/lib/libCGAL_Core.so)
target_link_libraries(triangle /home/hongjun/hjwang/cgal/dist/lib/libCGAL.so)
target_link_libraries(triangle /usr/lib/x86_64-linux-gnu/libgmp.so)

add_executable(psmesh psmesh.cpp)
target_link_libraries(psmesh /home/hongjun/hjwang/cgal/dist/lib/libCGAL_Core.so)
target_link_libraries(psmesh /home/hongjun/hjwang/cgal/dist/lib/libCGAL.so)
target_link_libraries(psmesh /usr/lib/x86_64-linux-gnu/libgmp.so)
target_link_libraries(psmesh /usr/lib/x86_64-linux-gnu/libmpfr.so)

add_executable(dtmesh dtmesh.cpp)
target_link_libraries(dtmesh /home/hongjun/hjwang/cgal/dist/lib/libCGAL_Core.so)
target_link_libraries(dtmesh /home/hongjun/hjwang/cgal/dist/lib/libCGAL.so)
target_link_libraries(dtmesh /usr/lib/x86_64-linux-gnu/libgmp.so)
target_link_libraries(dtmesh /usr/lib/x86_64-linux-gnu/libmpfr.so)
target_link_libraries(dtmesh /home/hongjun/hjwang/cgal/dist/lib/libCGAL_ImageIO.so)

add_executable(norm_esti norm_esti.cpp)
target_link_libraries(norm_esti /home/hongjun/hjwang/cgal/dist/lib/libCGAL_Core.so)
target_link_libraries(norm_esti /home/hongjun/hjwang/cgal/dist/lib/libCGAL.so)
target_link_libraries(norm_esti /usr/lib/x86_64-linux-gnu/libgmp.so)
target_link_libraries(norm_esti /usr/lib/x86_64-linux-gnu/libmpfr.so)

add_executable(alphashap alphashap.cpp)
target_link_libraries(alphashap /home/hongjun/hjwang/cgal/dist/lib/libCGAL_Core.so)
target_link_libraries(alphashap /home/hongjun/hjwang/cgal/dist/lib/libCGAL.so)
target_link_libraries(alphashap /usr/lib/x86_64-linux-gnu/libgmp.so)
target_link_libraries(alphashap /usr/lib/x86_64-linux-gnu/libmpfr.so)

add_executable(greedy_projection greedy_projection.cpp)
target_link_libraries(greedy_projection ${PCL_LIBRARIES})
target_link_libraries(greedy_projection /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(hadamard hadamardtest.cpp hadamard.cpp)
target_link_libraries(hadamard ${PCL_LIBRARIES})
target_link_libraries(hadamard /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)

add_executable(manifoldcrawler manifoldcrawler.cpp hadamard.cpp)
target_link_libraries(manifoldcrawler /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(manifoldcrawler /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)
target_link_libraries(manifoldcrawler ${PCL_LIBRARIES})
target_link_libraries(manifoldcrawler /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(segment segment.cpp)
target_link_libraries(segment /home/hongjun/workspace/triangle/build/libtriangle_shared.so)
target_link_libraries(segment /usr/lib/x86_64-linux-gnu/libm.so)
target_link_libraries(segment ${PCL_LIBRARIES})
target_link_libraries(segment /usr/lib/x86_64-linux-gnu/libboost_system.so)

add_executable(pclnei pclnei.cpp)
target_link_libraries(pclnei ${PCL_LIBRARIES})

add_executable(trimesh trimesh.cpp diffgeom.cpp)
target_link_libraries(trimesh /home/hongjun/hjwang/openmesh/dist/lib/libOpenMeshCored.so)
target_link_libraries(trimesh /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)

add_executable(surfcurv surfcurv.cpp diffgeom.cpp hadamard.cpp)
target_link_libraries(surfcurv /home/hongjun/hjwang/openmesh/dist/lib/libOpenMeshCored.so)
target_link_libraries(surfcurv /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(surfcurv /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)

add_executable(visdetectcrawler visdetectcrawler.cpp)
target_link_libraries(visdetectcrawler /home/hongjun/hjwang/openmesh/dist/lib/libOpenMeshCored.so)
target_link_libraries(visdetectcrawler /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(visdetectcrawler /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)
target_link_libraries(visdetectcrawler ${PCL_LIBRARIES})
target_link_libraries(visdetectcrawler /usr/lib/x86_64-linux-gnu/libboost_system.so)
target_link_libraries(visdetectcrawler /home/hongjun/workspace/triangle/build/libtriangle_shared.so)
target_link_libraries(visdetectcrawler /usr/lib/x86_64-linux-gnu/libm.so)
target_link_libraries(visdetectcrawler /home/hongjun/hjwang/aiethan/tooldist/lib/libaiethantool.so)

add_executable(visdetectpoisson visdetectpoisson.cpp)
target_link_libraries(visdetectpoisson /home/hongjun/hjwang/openmesh/dist/lib/libOpenMeshCored.so)
target_link_libraries(visdetectpoisson /home/hongjun/workspace/aiethan/build/lib/libaiethan.so)
target_link_libraries(visdetectpoisson /home/hongjun/hjwang/jsoncpp1.8.3/lib/libjsoncpp.so)
target_link_libraries(visdetectpoisson ${PCL_LIBRARIES})
target_link_libraries(visdetectpoisson /usr/lib/x86_64-linux-gnu/libboost_system.so)
target_link_libraries(visdetectpoisson /home/hongjun/workspace/triangle/build/libtriangle_shared.so)
target_link_libraries(visdetectpoisson /usr/lib/x86_64-linux-gnu/libm.so)
target_link_libraries(visdetectpoisson /home/hongjun/hjwang/aiethan/tooldist/lib/libaiethantool.so)
target_link_libraries(visdetectpoisson /usr/lib/x86_64-linux-gnu/libgomp.so.1)
target_link_libraries(visdetectpoisson /home/hongjun/hjwang/poissonrecon/PoissonRecon/Bin/Linux/libPoissonReconSelf.a)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

install(TARGETS hello RUNTIME DESTINATION bin)

add_subdirectory(data)